网络虚拟化进阶学习笔记

--- a/docs/马哥2016linux架构班/网络虚拟化技术进阶1.md
+++ b/docs/马哥2016linux架构班/网络虚拟化技术进阶1.md
@@ -1,2 +1,150 @@
+<!-- TOC depthFrom:1 depthTo:6 withLinks:1 updateOnSave:1 orderedList:0 -->
+
+- [网络虚拟化技术进阶1](#网络虚拟化技术进阶1)
+	- [网络虚拟化](#网络虚拟化)
+	- [OpenVSwitch](#openvswitch)
+		- [OpenVSwitch特性](#openvswitch特性)
+		- [OpenVSwitch组成部分](#openvswitch组成部分)
+
+<!-- /TOC -->
 # 网络虚拟化技术进阶1
 
+
+![1547906656031.png](image/1547906656031.png)
+
+## 网络虚拟化
+
+复杂的网络虚拟化网络
+* network namespace网络名称空间
+* OpenVSwitch
+
+![1547906762058.png](image/1547906762058.png)
+
+
+## OpenVSwitch
+
+### OpenVSwitch特性
+
+* 基于C语言研发
+* 支持KVM、Xen等大部分虚拟化技术
+* 支持多种协议，802.1q协议，支持trunk、access
+* 支持网卡绑定技术，NIC Bonding，将多个网卡组合起来作为虚拟网卡使用，实现负载均衡的工作效果
+* 支持NetFlow、sFlow
+* 支持Qos配置及策略，Quality of Service
+* 支持GRE通用路由分装，支持VxLan技术
+* 支持OpenFlow技术，支持其扩展
+* 支持Linux内核高性能转发功能
+* 如果不考虑性能，其功能不亚于一款高级硬件交换机
+
+### OpenVSwitch组成部分
+
+
+* **ovs-vswitchd**：OVS守护进程是OVS的核心部件，实现交换功能，和Linux内核兼容模块一起，实现基于流的交换（flow-based switching）。它和上层 controller 通信遵从 OPENFLOW 协议，它与 ovsdb-server 通信使用 OVSDB 协议，它和内核模块通过netlink通信，它支持多个独立的 datapath（网桥），它通过更改flow table 实现了绑定和VLAN等功能。
+* **ovsdb-server**：OVS轻量级的数据库服务器，用于整个OVS的配置信息，包括接口，交换内容，VLAN 等等。ovs-vswitchd 根据数据库中的配置信息工作。它于 manager 和 ovs-vswitchd 交换信息使用了OVSDB(JSON-RPC)的方式。
+* ovs-dpctl：一个工具，用来配置交换机内核模块，可以控制转发规则。
+* **ovs-vsctl**：主要是获取或者更改ovs-vswitchd的配置信息，此工具操作的时候会更新ovsdb-server中的数据库。
+* ovs-appctl：主要是向OVS守护进程发送命令的，一般用不上。 a utility that sends commands to running Open vSwitch daemons (ovs-vswitchd)
+* ovsdbmonitor：GUI工具来显示ovsdb-server中数据信息。（Ubuntu下是可以使用apt-get安装，可以远程获取OVS数据库和OpenFlow的流表）
+* ovs-controller：一个简单的OpenFlow控制器
+* ovs-ofctl：用来控制OVS作为OpenFlow交换机工作时候的流表内容。
+* ovs-pki：OpenFlow交换机创建和管理公钥框架；
+* ovs-tcpundump：tcpdump的补丁，解析OpenFlow的消息；
+* brocompat.ko : Linux bridge compatibility module
+* openvswitch.ko : Open vSwitch switching datapath
+
+
+参考链接<https://blog.csdn.net/tantexian/article/details/46707175>
+
+
+准备两个实验节点
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+---
