添加gre配置实验，牛逼的一批的GRE

--- a/docs/马哥2016linux架构班/网络虚拟化技术进阶2.md
+++ b/docs/马哥2016linux架构班/网络虚拟化技术进阶2.md
@@ -1,2 +1,314 @@
 # 网络虚拟化技术进阶2
 
+
+
+## 不同虚拟机跨越多台虚拟机虚拟网络通信实验
+
+![1547976354942](image/1547976354942.png)
+
+vm1和vm3如何通信？
+
+最简单粗暴的就是虚拟机接入虚拟桥，然后所有接口连接到物理交换机。这要求所有节点都在同一个物理网络中。
+
+但是现实中常常遇到虚拟机不在一个机房内，不在一台计算节点，这个时候该怎么办？
+
+
+
+### 基于GRE路由协议实现
+
+* GRE(Gerneric Routing Encapsulation)通用路由封装协议
+  * 属于三层，在IP层，将任何常见的网络层协议都封装转发到另一台主机。
+  * 是一种隧道技术
+  * 发送端封装，接收端解封装
+  * 跨越的距离取决于GRE路由协议本身所能够支持的距离
+
+
+
+
+
+## 实验过程
+
+
+
+将原先的虚拟机关闭
+
+![1547977092870](image/1547977092870.png)
+
+手动移除接口
+
+![1547977114033](image/1547977114033.png)
+
+![1547977153506](image/1547977153506.png)
+
+一切恢复到最原始状态
+
+另一台主机环境搭建
+
+![1547977226117](image/1547977226117.png)
+
+启动openvswitch，手动创建桥，下载磁盘映像文件
+
+![1547977258475](image/1547977258475.png)
+
+![1547977288049](image/1547977288049.png)
+
+![1547977306300](image/1547977306300.png)
+
+两边启动实例并且配置IP地址，使用dnsmasq来自动分配ip地址
+
+![1547977382308](image/1547977382308.png)
+
+因为是centos6，升级一下iproute
+
+![1547977408635](image/1547977408635.png)
+
+
+
+创建一个名称空间，相当于创建一个虚拟路由器。把一端放到网络名称空间，另一半接到桥上
+
+![1547977547256](image/1547977547256.png)
+
+配置名称空间接口
+
+![1547977652421](image/1547977652421.png)
+
+![1547977673066](image/1547977673066.png)
+
+![1547977752909](image/1547977752909.png)
+
+启动DNS服务
+
+![1547977951663](image/1547977951663.png)
+
+启动虚拟机检测能否获得ip地址
+
+![1547978012296](image/1547978012296.png)
+
+![1547978046008](image/1547978046008.png)
+
+![1547978062709](image/1547978062709.png)
+
+可以自动获得ip地址但是没有设定掩码
+
+在另一台虚拟机启动一个虚拟化实例
+
+![1547978197360](image/1547978197360.png)
+
+安装tigervnc然后连接到VNC上
+
+![1547978217534](image/1547978217534.png)
+
+![1547978246146](image/1547978246146.png)
+
+没有自动获取ip地址，毕竟没有配置
+
+![1547978487647](image/1547978487647.png)
+
+**GRE隧道作为独立接口，不能直接接到桥上，是作为独立接口使用的哦。桥可以借助物理接口进行通信，但是不能直接接到GRE接口**
+
+![1547978623535](image/1547978623535.png)
+
+![1547978687822](image/1547978687822.png)
+
+物理接口分别配置ip地址。同网段互相ping可以连通。只要中间能够通信就行。经过路由器也是可以的。
+
+![1547978745238](image/1547978745238.png)
+
+如何让接口承载GRE接口通信？需要在桥上添加Port，该Port为GRE类型
+
+![1547978844600](image/1547978844600.png)
+
+![1547978829036](image/1547978829036.png)
+
+![1547978866183](image/1547978866183.png)
+
+每个port默认都有一个接口，然后设定接口属性。一个Port可以有多个接口
+
+![1547978897103](image/1547978897103.png)
+
+设定接口类型为GRE，并且要设定对端接口ip地址
+
+![1547979000573](image/1547979000573.png)
+
+构建对端隧道
+
+![1547979104277](image/1547979104277.png)
+
+![1547979121986](image/1547979121986.png)
+
+另一端虚拟机重新获取ip地址，可以使用对端dhcp服务器么？
+
+![1547979268276](image/1547979268276.png)
+
+kill掉原先进程，重启，vnc连接查看
+
+![1547979294188](image/1547979294188.png)
+
+完美可以获得地址，牛逼不？神奇不？显然在一个局域网中了，既然可以获得地址，那么通信没有问题了。
+
+![1547979330177](image/1547979330177.png)
+
+抓包看下怎么工作的
+
+![1547979376790](image/1547979376790.png)
+
+![1547979408146](image/1547979408146.png)
+
+隧道通信一览无余，牛逼~
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
