--- a/docs/马哥2016linux架构班/网络虚拟化技术进阶2.md
+++ b/docs/马哥2016linux架构班/网络虚拟化技术进阶2.md
@@ -28,6 +28,8 @@ vm1和vm3如何通信？
 
 ## 实验过程
 
+### GRE
+
 
 
 将原先的虚拟机关闭
@@ -155,6 +157,132 @@ kill掉原先进程，重启，vnc连接查看
 ![1547979408146](image/1547979408146.png)
 
 隧道通信一览无余，牛逼~
+
+![1547979488006](image/1547979488006.png)
+
+继续，让vm1和vm2能够通信，vm3和vm4能够通信，但是之间不能通信，就是设定放在不同VLAN种
+
+![1547979580225](image/1547979580225.png)
+
+![1547979592338](image/1547979592338.png)
+
+可以自动获取ip地址
+
+两台模拟物理机器都启动两台虚拟机
+
+![1547979623533](image/1547979623533.png)
+
+![1547979640382](image/1547979640382.png)
+
+此时彼此都能相互通信，处于同一个VLAN中
+
+开始划分VLAN，让彼此不能随意通信，设定port的tag就可以了
+
+![1547979746690](image/1547979746690.png)
+
+![1547979775208](image/1547979775208.png)
+
+![1547979794498](image/1547979794498.png)
+
+![1547979810009](image/1547979810009.png)
+
+![1547979822422](image/1547979822422.png)
+
+另一台虚拟机也设定不同VLAN
+
+![1547979868060](image/1547979868060.png)
+
+不同虚拟机不同VLAN也ping不通了
+
+![1547980089697](image/1547980089697.png)
+
+只要处于同一个VLAN中就可以通信，就算不在同一个物理机中
+
+接下来清除所有配置，回复原先状态
+
+![1547987147570](image/1547987147570.png)
+
+![1547987191057](image/1547987191057.png)
+
+![1547987206742](image/1547987206742.png)
+
+关闭GRE功能
+
+
+
+![1547987305912](image/1547987305912.png)
+
+执行destroy，删除不掉，因为里面有接口
+
+![1547987345838](image/1547987345838.png)
+
+尝试首先删除接口然后删除port。但是还是删除不掉，怎么办？
+
+![1547987393932](image/1547987393932.png)
+
+尝试删除掉选项呢？还是删除不掉
+
+![1547987445183](image/1547987445183.png)
+
+尝试直接在桥上删除，成功
+
+![1547987461084](image/1547987461084.png)
+
+![1547987503309](image/1547987503309.png)
+
+删除GRE之后彼此之间隔离，不能通信了
+
+
+
+
+
+
+
+
+
+
+
+
+
+### VxLAN
+
+配置机制几乎与GRE一模一样，除了类型设定为VxLan
+
+
+
+![1547987530836](image/1547987530836.png)
+
+创建新接口
+
+![1547987617129](image/1547987617129.png)
+
+![1547987631634](image/1547987631634.png)
+
+port和interface显示的结果不一样。
+
+另一台主机上也做这样的配置
+
+![1547987681995](image/1547987681995.png)
+
+测试连通性
+
+![1547987693234](image/1547987693234.png)
+
+都能ping通，说明VxLAN配置成了
+
+![1547987720037](image/1547987720037.png)
+
+这里没有显示出10段的ping包信息，因为是基于VxLAN而不是GRE形式，所以，不一样，只是这里没有解码出来而已
+
+这里VxLAN又实现了。这是很独特的协议，也较为新型的协议。
+
+
+
+
+
+
+
+
 
 
 
