--- a/docs/马哥2016linux架构班/网络虚拟化技术进阶2.md
+++ b/docs/马哥2016linux架构班/网络虚拟化技术进阶2.md
@@ -278,6 +278,268 @@ port和interface显示的结果不一样。
 
 
 
+![1547987845115](image/1547987845115.png)
+
+
+
+### 如何让VM访问Internet
+
+**这里是最难的地方**。牛逼复杂的功能和操作，如果领会了算是大佬了。
+
+
+
+
+
+![1547987998025](image/1547987998025.png)
+
+SNAT+DNAT
+
+![1547988056849](image/1547988056849.png)
+
+这列操作比较复杂
+
+
+
+首先清除原先的VxLAN操作
+
+
+
+![1547988234062](image/1547988234062.png)
+
+新增一台虚拟机，配置网络
+
+![1547988478919](image/1547988478919.png)
+
+这里涉及到一个技巧，需要把虚拟机内部网卡MAC地址和虚拟网卡匹配，不然有些桥接仅主机可能不是你所想的那样，所以一开始就得屡清楚才行。不然后面很容易乱。
+
+![1547988627386](image/1547988627386.png)
+
+修改**/etc/udev/rules.d/70-persistent-net.rules**
+
+![1547988708916](image/1547988708916.png)
+
+![1547988811207](image/1547988811207.png)
+
+修改过后重新加载网络驱动，就生效了。这就相当于修改了网卡名
+
+![1547988931751](image/1547988931751.png)
+
+![1547989033775](image/1547989033775.png)
+
+![1547989047350](image/1547989047350.png)
+
+![1547989062493](image/1547989062493.png)
+
+测试连通性。
+
+![1547989096504](image/1547989096504.png)
+
+添加一个ovs桥和一个普通桥就行了。把eth2放到这个桥上
+
+![1547989145638](image/1547989145638.png)
+
+![1547989222323](image/1547989222323.png)
+
+br-ex设定作用于与Internet通信
+
+![1547989252174](image/1547989252174.png)
+
+![1547989280454](image/1547989280454.png)
+
+![1547989297407](image/1547989297407.png)
+
+还需要创建内部桥。还需要创建netns
+
+新建的虚拟机安装openvswitch
+
+![1547989365749](image/1547989365749.png)
+
+安装过后启动服务
+
+![1547989387565](image/1547989387565.png)
+
+![1547989401448](image/1547989401448.png)
+
+设定GRE接口
+
+![1547989518816](image/1547989518816.png)
+
+对应端也设定接口
+
+![1547989557352](image/1547989557352.png)
+
+此时隧道俨然建立起来
+
+![1547989587232](image/1547989587232.png)
+
+创建网络名称空间连接起来两个虚拟机上。升级iproute包，然后创建名称空间，centos7上就不用升级了
+
+![1547989744417](image/1547989744417.png)
+
+创建一对网卡，一对用来连接br-ex和br-in的接口，分别放入对应桥
+
+![1547989812094](image/1547989812094.png)
+
+![1547990076228](image/1547990076228.png)
+
+![1547990160847](image/1547990160847.png)
+
+
+
+激活对应的接口，放到对应的桥就是了
+
+![1547989861462](image/1547989861462.png)
+
+![1547989945903](image/1547989945903.png)
+
+![1547990207859](image/1547990207859.png)
+
+netns开启路由转发
+
+![1547990275979](image/1547990275979.png)
+
+虚拟机添加默认网关
+
+![1547990321773](image/1547990321773.png)
+
+添加SNAT规则
+
+![1547990384011](image/1547990384011.png)
+
+![1547990394408](image/1547990394408.png)
+
+配置DNAT规则，让内部可以访问互联网
+
+![1547990427341](image/1547990427341.png)
+
+![1547990475384](image/1547990475384.png)
+
+![1547990545688](image/1547990545688.png)
+
+![1547990593101](image/1547990593101.png)
+
+![1547990641702](image/1547990641702.png)
+
+![1547990675213](image/1547990675213.png)
+
+![1547990741242](image/1547990741242.png)
+
+为什么ping包进得去出不来呢？
+
+![1547990836069](image/1547990836069.png)
+
+可能是物理节点上上出的问题。
+
+![1547990858284](image/1547990858284.png)
+
+构建小规模的OpenStack，复杂度没这么高
+
+知道netns，知道ovs，知道GRE，知道VxLAN，之后很多事情就很简单了
+
+复杂是步骤繁琐，不是本身原理难度有多大。
+
+
+
+![1547990966312](image/1547990966312.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
