完成输入输出章节学习

--- a/docs/linux内核/IO/字符设备2-如何建立直销模式.md
+++ b/docs/linux内核/IO/字符设备2-如何建立直销模式.md
@@ -1,8 +1,10 @@
 # 字符设备2-如何建立直销模式
 
-我们讲了一个设备能够被打开、能够读写，主流的功能基本就完成了。我们讲输入输出设备的时候说到，如果一个设备有事情需要通知操作系统，会通过中断和设备驱动程序进行交互，今天我们就来解析中断处理机制。
+一个设备能够被打开、能够读写，主流的功能基本就完成了。
 
-鼠标就是通过中断，将自己的位置和按键信息，传递给设备驱动程序。
+讲输入输出设备的时候说到，如果一个设备有事情需要通知操作系统，会通过中断和设备驱动程序进行交互，今天我们就来解析中断处理机制。
+
+鼠标就是通过中断，将自己的位置和按键信息，传递给设备驱动程序。如下代码：
 
 ```
 static int logibm_open(struct input_dev *dev)
@@ -67,19 +69,23 @@ enum irqreturn {
 
 其中，irq 是一个整数，是中断信号。dev_id 是一个 void * 的通用指针，主要用于区分同一个中断处理函数对于不同设备的处理。
 
-这里的返回值有三种：IRQ_NONE 表示不是我的中断，不归我管；IRQ_HANDLED 表示处理完了的中断；IRQ_WAKE_THREAD 表示有一个进程正在等待这个中断，中断处理完了，应该唤醒它。
+这里的返回值有三种：
+
+1. IRQ_NONE 表示不是我的中断，不归我管；
+2. IRQ_HANDLED 表示处理完了的中断；
+3. IRQ_WAKE_THREAD 表示有一个进程正在等待这个中断，中断处理完了，应该唤醒它。
 
 上面的例子中，logibm_interrupt 这个中断处理函数，先是获取了 x 和 y 的移动坐标，以及左中右的按键，上报上去，然后返回 IRQ_HANDLED，这表示处理完毕。
 
 其实，写一个真正生产用的中断处理程序还是很复杂的。当一个中断信号 A 触发后，正在处理的过程中，这个中断信号 A 是应该暂时关闭的，这样是为了防止再来一个中断信号 A，在当前的中断信号 A 的处理过程中插一杠子。但是，这个暂时关闭的时间应该多长呢？
 
-如果太短了，应该原子化处理完毕的没有处理完毕，又被另一个中断信号 A 中断了，很多操作就不正确了；如果太长了，一直关闭着，新的中断信号 A 进不来，系统就显得很慢。
+如果太短了，应该原子化处理完毕的没有处理完毕，又被另一个中断信号 A 中断了，很多操作就不正确了；如果太长了，一直关闭着，新的中断信号 A 进不来，系统就显得很慢。**如何折中？**，是要出列更多任务，还是要更实时？
 
-所以，很多中断处理程序将整个中断要做的事情分成两部分，称为上半部和下半部，或者成为关键处理部分和延迟处理部分。
+所以，很多中断处理程序将整个中断要做的事情分成两部分，称为上半部和下半部，或者成为**关键处理部分**和**延迟处理部分**。
 
 在中断处理函数中，仅仅处理关键部分，完成了就将中断信号打开，使得新的中断可以进来，需要比较长时间处理的部分，也即延迟部分，往往通过工作队列等方式慢慢处理。
 
-流程较为复杂，推荐你好好读一读《Linux Device Drivers》这本书
+流程较为复杂，推荐你好好读一读**《Linux Device Drivers》**这本书
 
 有了中断处理函数，接下来要调用 request_irq 来注册这个中断处理函数。request_irq 有这样几个参数：
 
@@ -89,6 +95,8 @@ enum irqreturn {
 * unsigned long flags 是一些标识位；
 * const char *name 是设备名称；
 * void *dev 这个通用指针应该和中断处理函数的 void *dev 相对应。
+
+中断执行流程如何？
 
 ```
 static inline int __must_check
@@ -123,7 +131,7 @@ int request_threaded_irq(unsigned int irq, irq_handler_t handler,
 }
 ```
 
-对于每一个中断，都有一个对中断的描述结构 struct irq_desc。它有一个重要的成员变量是 struct irqaction，用于表示处理这个中断的动作。如果我们仔细看这个结构，会发现，它里面有 next 指针，也就是说，这是一个链表，对于这个中断的所有处理动作，都串在这个链表上。
+对于每一个中断，都有一个对中断的描述结构 struct irq_desc。它有一个重要的成员变量是 **struct irqaction**，用于表示处理这个中断的动作。如果我们仔细看这个结构，会发现，它里面有 next 指针，也就是说，这是一个链表，对于这个中断的所有处理动作，都串在这个链表上。
 
 ```
 struct irq_desc {
@@ -175,7 +183,9 @@ struct irqaction {
 3. irq 为中断信号；
 4. 如果中断处理函数在单独的线程运行，则有 thread_fn 是线程的执行函数，thread 是线程的 task_struct。
 
-在 request_threaded_irq 函数中，irq_to_desc 根据中断信号查找中断描述结构。如何查找呢？这就要区分情况。一般情况下，所有的 struct irq_desc 都放在一个数组里面，我们直接按下标查找就可以了。如果配置了 CONFIG_SPARSE_IRQ，那中断号是不连续的，就不适合用数组保存了，
+在 request_threaded_irq 函数中，**irq_to_desc 根据中断信号查找中断描述结构**。如何查找呢？
+
+这就要区分情况。一般情况下，所有的 struct irq_desc 都放在一个数组里面，我们直接按下标查找就可以了。如果配置了 **CONFIG_SPARSE_IRQ**（稀疏IRQ），那中断号是不连续的，就不适合用数组保存了，
 
 我们可以放在一棵**基数树**上。我们不是第一次遇到这个数据结构了。这种结构对于从某个整型 key 找到 value 速度很快，中断信号 irq 是这个整数。通过它，我们很快就能定位到对应的 struct irq_desc。
 
@@ -261,15 +271,15 @@ setup_irq_thread(struct irqaction *new, unsigned int irq, bool secondary)
   return 0;
 ```
 
-至此为止，request_irq 完成了它的使命。总结来说，它就是根据中断信号 irq，找到基数树上对应的 irq_desc，然后将新的 irqaction 挂在链表上。
+至此为止，request_irq 完成了它的使命。总结来说，**它就是根据中断信号 irq，找到基数树上对应的 irq_desc，然后将新的 irqaction 挂在链表上**。
 
 接下来，我们就来看，真正中断来了的时候，会发生一些什么。
 
 真正中断的发生还是要从硬件开始。这里面有四个层次。
 
 * 第一个层次是外部设备给中断控制器发送物理中断信号。
-* 第二个层次是中断控制器将物理中断信号转换成为中断向量 interrupt vector，发给各个 CPU。
-* 第三个层次是每个 CPU 都会有一个中断向量表，根据 interrupt vector 调用一个 IRQ 处理函数。注意这里的 IRQ 处理函数还不是咱们上面指定的 irq_handler_t，到这一层还是 CPU 硬件的要求。
+* 第二个层次是中断控制器将物理中断信号转换成为中断向量 interrupt vector，发给**各个** CPU。
+* 第三个层次是**每个 CPU 都会有一个中断向量表**，根据 interrupt vector 调用一个 IRQ 处理函数。注意这里的 IRQ 处理函数还不是咱们上面指定的 irq_handler_t，到这一层还是 CPU 硬件的要求。
 * 第四个层次是在 IRQ 处理函数中，将 interrupt vector 转化为抽象中断层的中断信号 irq，调用中断信号 irq 对应的中断描述结构里面的 irq_handler_t。
 
 ![20200920_125924_26](image/20200920_125924_26.png)
@@ -315,13 +325,15 @@ int80系统调用
 #define IA32_SYSCALL_VECTOR    0x80
 ```
 
-为了处理中断，CPU 硬件要求每一个 CPU 都有一个中断向量表，通过 load_idt 加载，里面记录着每一个中断对应的处理方法，这个中断向量表定义在文件 arch/x86/kernel/traps.c 中。
+为了处理中断，**CPU 硬件要求每一个 CPU 都有一个中断向量表**，通过 load_idt 加载，里面记录着每一个中断对应的处理方法，这个中断向量表定义在文件 arch/x86/kernel/traps.c 中。
 
 ```
 gate_desc idt_table[NR_VECTORS] __page_aligned_bss;
 ```
 
-对于一个 CPU 可以处理的中断被分为几个部分，第一部分 0 到 31 的前 32 位是系统陷入或者系统异常，这些错误无法屏蔽，一定要处理。
+对于一个 CPU 可以处理的中断被分为几个部分，
+
+**第一部分 0 到 31 的前 32 位是系统陷入或者系统异常，这些错误无法屏蔽，一定要处理。**
 
 这些中断的处理函数在系统初始化的时候，在 start_kernel 函数中调用过 trap_init()。这个咱们讲系统初始化和系统调用的时候，都大概讲过这个函数，这里还需要仔细看一下。
 
@@ -369,7 +381,7 @@ static inline void _set_gate(int gate, unsigned type, void *addr,
 }
 ```
 
-从代码可以看出，set_intr_gate 其实就是将每个中断都设置了中断处理函数，放在中断向量表 idt_table 中。
+从代码可以看出，**set_intr_gate 其实就是将每个中断都设置了中断处理函数，放在中断向量表 idt_table 中**。
 
 在 trap_init 中，由于 set_intr_gate 调用的太多，容易让人眼花缭乱。其实 arch/x86/include/asm/traps.h 文件中，早就定义好了前 32 个中断。如果仔细对比一下，你会发现，这些都在 trap_init 中使用 set_intr_gate 设置过了。
 
@@ -431,9 +443,9 @@ void __init native_init_IRQ(void)
 
 也即所有的设备中断的中断处理函数，在中断向量表里面都会设置为从 irq_entries_start 开始，偏移量为 i - FIRST_EXTERNAL_VECTOR 的一项。
 
-看来中断处理函数是定义在 irq_entries_start 这个表里面的，我们在 arch\x86\entry\entry_32.S 和 arch\x86\entry\entry_64.S 都能找到这个函数表的定义。
+看来**中断处理函数是定义在 irq_entries_start 这个表里面的**，我们在 arch\x86\entry\entry_32.S 和 arch\x86\entry\entry_64.S 都能找到这个函数表的定义。
 
-这又是汇编语言，不需要完全看懂，但是我们还是能看出来，这里面定义了 FIRST_SYSTEM_VECTOR - FIRST_EXTERNAL_VECTOR 项。每一项都是中断处理函数，会跳到 common_interrupt 去执行。这里会最终调用 do_IRQ，调用完毕后，就从中断返回。这里我们需要区分返回用户态还是内核态。这里会有一个机会触发抢占，咱们讲进程切换的时候讲过的。
+这又是汇编语言，不需要完全看懂，但是我们还是能看出来，这里面定义了 **FIRST_SYSTEM_VECTOR - FIRST_EXTERNAL_VECTOR 项**。**每一项都是中断处理函数，会跳到 common_interrupt 去执行。这里会最终调用 do_IRQ，调用完毕后，就从中断返回。这里我们需要区分返回用户态还是内核态**。这里会有一个机会触发抢占，咱们讲进程切换的时候讲过的。
 
 ```
 ENTRY(irq_entries_start)
@@ -462,7 +474,7 @@ retint_kernel:
 ......
 ```
 
-这样任何一个中断向量到达任何一个 CPU，最终都会走到 do_IRQ。我们来看 do_IRQ 的实现。
+这样**任何一个中断向量到达任何一个 CPU，最终都会走到 do_IRQ**。我们来看 do_IRQ 的实现。
 
 ```
 /*
@@ -487,16 +499,184 @@ __visible unsigned int __irq_entry do_IRQ(struct pt_regs *regs)
 }
 ```
 
-在这里面，从 AX 寄存器里面拿到了中断向量 vector，但是别忘了中断控制器发送给每个 CPU 的中断向量都是每个 CPU 局部的，而抽象中断处理层的虚拟中断信号 irq 以及它对应的中断描述结构 irq_desc 是全局的，也即这个 CPU 的 200 号的中断向量和另一个 CPU 的 200 号中断向量对应的虚拟中断信号 irq 和中断描述结构 irq_desc 可能不一样，这就需要一个映射关系。这个映射关系放在 Per CPU 变量 vector_irq 里面。
+在这里面，从 AX 寄存器里面拿到了中断向量 vector，但是别忘了**中断控制器发送给每个 CPU 的中断向量都是每个 CPU 局部的，而抽象中断处理层的虚拟中断信号 irq 以及它对应的中断描述结构 irq_desc 是全局的**，也即这个 CPU 的 200 号的中断向量和另一个 CPU 的 200 号中断向量对应的虚拟中断信号 irq 和中断描述结构 irq_desc 可能不一样，这就需要一个映射关系。这个**映射关系放在 Per CPU 变量 vector_irq 里面**。
 
 ```
 DECLARE_PER_CPU(vector_irq_t, vector_irq);
 ```
 
+在系统初始化的时候，我们会调用 __assign_irq_vector，将虚拟中断信号 irq 分配到某个 CPU 上的中断向量。
+
+```
+static int __assign_irq_vector(int irq, struct apic_chip_data *d,
+             const struct cpumask *mask,
+             struct irq_data *irqdata)
+{
+  static int current_vector = FIRST_EXTERNAL_VECTOR + VECTOR_OFFSET_START;
+  static int current_offset = VECTOR_OFFSET_START % 16;
+  int cpu, vector;
+......
+  while (cpu < nr_cpu_ids) {
+    int new_cpu, offset;
+......
+    vector = current_vector;
+    offset = current_offset;
+next:
+    vector += 16;
+    if (vector >= first_system_vector) {
+      offset = (offset + 1) % 16;
+      vector = FIRST_EXTERNAL_VECTOR + offset;
+    }
+
+
+    /* If the search wrapped around, try the next cpu */
+    if (unlikely(current_vector == vector))
+      goto next_cpu;
 
 
 
 
+    if (test_bit(vector, used_vectors))
+      goto next;
+
+
+......
+    /* Found one! */
+    current_vector = vector;
+    current_offset = offset;
+    /* Schedule the old vector for cleanup on all cpus */
+    if (d->cfg.vector)
+      cpumask_copy(d->old_domain, d->domain);
+    for_each_cpu(new_cpu, vector_searchmask)
+      per_cpu(vector_irq, new_cpu)[vector] = irq_to_desc(irq);
+    goto update;
+
+
+next_cpu:
+    cpumask_or(searched_cpumask, searched_cpumask, vector_cpumask);
+    cpumask_andnot(vector_cpumask, mask, searched_cpumask);
+    cpu = cpumask_first_and(vector_cpumask, cpu_online_mask);
+    continue;
+  }
+....
+```
+
+在这里，一旦找到某个向量，就将 CPU 的此向量对应的向量描述结构 irq_desc，设置为虚拟中断信号 irq 对应的向量描述结构 irq_to_desc(irq)。
+
+这样 do_IRQ 会根据中断向量 vector 得到对应的 irq_desc，然后调用 handle_irq。handle_irq 会调用 generic_handle_irq_desc，里面调用 irq_desc 的 handle_irq。
+
+```
+static inline void generic_handle_irq_desc(struct irq_desc *desc)
+{
+  desc->handle_irq(desc);
+}
+```
+
+这里的 handle_irq，最终会调用 __handle_irq_event_percpu。代码如下：
+
+```
+irqreturn_t __handle_irq_event_percpu(struct irq_desc *desc, unsigned int *flags)
+{
+  irqreturn_t retval = IRQ_NONE;
+  unsigned int irq = desc->irq_data.irq;
+  struct irqaction *action;
+
+
+  record_irq_time(desc);
+
+
+  for_each_action_of_desc(desc, action) {
+    irqreturn_t res;
+    res = action->handler(irq, action->dev_id);
+    switch (res) {
+    case IRQ_WAKE_THREAD:
+      __irq_wake_thread(desc, action);
+    case IRQ_HANDLED:
+      *flags |= action->flags;
+      break;
+    default:
+      break;
+    }
+    retval |= res;
+  }
+  return retval;
+```
+
+__handle_irq_event_percpu 里面调用了 irq_desc 里每个 hander，这些 hander 是我们在所有 action 列表中注册的，这才是我们设置的那个中断处理函数。如果返回值是 IRQ_HANDLED，就说明处理完毕；如果返回值是 IRQ_WAKE_THREAD 就唤醒线程。
+
+至此，中断的整个过程就结束了。
+
+## 小结
+
+这一节，我们讲了中断的整个处理过程。中断是从外部设备发起的，会形成外部中断。外部中断会到达中断控制器，中断控制器会发送中断向量 Interrupt Vector 给 CPU。
+
+* 对于每一个 CPU，都要求有一个 idt_table，里面存放了不同的中断向量的处理函数。
+* 中断向量表中已经填好了前 32 位，外加一位 32 位系统调用，其他的都是用于设备中断。
+* 硬件中断的处理函数是 do_IRQ 进行统一处理，在这里会让中断向量，通过 vector_irq 映射为 irq_desc。
+* irq_desc 是一个用于描述用户注册的中断处理函数的结构，为了能够根据中断向量得到 irq_desc 结构，会把这些结构放在一个**基数树**里面，方便查找。
+* irq_desc 里面有一个成员是 irqaction，指向设备驱动程序里面注册的中断处理函数。
+
+![20200921_204050_92](image/20200921_204050_92.png)
+
+## 练习
+
+你知道如何查看每个 CPU 都收到了哪些中断吗？
+
+![20200921_204904_98](image/20200921_204904_98.png)
+
+## 总结
+
+- 设备中断处理
+    - 定义中断处理函数:irq_handler_t
+        - 函数入参
+            - int irq:中断信号
+            - void * dev_id:通用指针，主要用于区分同一个中断处理函数对于不同设备的处理
+        - 返回值
+            - IRQ_NONE:设备不是中断接收者
+            - IRQ_HANDLED:处理完了的中断
+            - IRQ_WAKE_THREAD:有一个进程正在等待这个中断，中断处理完了，应该唤醒它
+        - 很多中断处理程序将整个中断要做的事情分成两部分，称为上半部和下半部，或者成为关键处理部分和延迟处理部分。在中断处理函数中，仅仅处理关键部分，完成了就将中断信号打开，使得新的中断可以进来，需要比较长时间处理的部分，也即延迟部分，往往通过工作队列等方式慢慢处理。
+    - 注册中断处理函数:request_irq
+        - 函数入参
+            - unsigned int irq 是中断信号
+            - irq_handler_t handler 是中断处理函数
+            - unsigned long flags 是一些标识位
+            - const char *name 是设备名称
+            - void *dev 这个通用指针应该和中断处理函数的 void *dev 相对应
+        - 初始化描述中断的结构体 irq_desc，其中 struct irqaction，用于表示处理这个中断的动作，irqaction 都有以下成员
+            - 中断处理函数 handler
+            - void *dev_id 为设备 id
+            - irq 为中断信号
+            - next 为指向下一个 action 的链表指针
+            - 如果中断处理函数在单独的线程运行，则有 thread_fn 是线程的执行函数，thread 是线程的 task_struct
+            - irpaction 的存储数据结构通过宏 CONFIG_SPARSE_IRQ 配置
+                - 如果为连续下标则使用数组
+                - 如果为不连续下标则使用基数树
+            - irq 并不是真正的、物理的中断信号，而是一个抽象的、虚拟的中断信号
+        - 内部调用 request_threaded_irq->__setup_irq
+            - 查找 irq_desc 是否已经有 irqaction
+            - irq 有一个 next 的参数，如果已经有同类的 action，则将其挂在链表末尾
+        - 如果设定了以单独的线程运行中断处理函数，setup_irq_thread 就会创建这个内核线程，wake_up_process 会唤醒它
+    - 中断处理流程
+        - 外部设备给中断控制器发送物理中断信号
+        - 中断控制器将物理中断信号转换成为中断向量 interrupt vector，发给各个 CPU
+        - 每个 CPU 都会有一个中断向量表，根据 interrupt vector 调用一个 IRQ 处理函数。注意这里的 IRQ 处理函数还不是咱们上面指定的 irq_handler_t，到这一层还是 CPU 硬件的要求
+        - 在 IRQ 处理函数中，将 interrupt vector 转化为抽象中断层的中断信号 irq，调用中断信号 irq 对应的中断描述结构里面的 irq_handler_t
+
+
+
+
+系统有256个中断向量,定义在中断向量表中,其中前32位[0-31]用于系统自身的内部中断,第32位用于32位中断(?),剩余用以设备中断,这是硬件的中断向量表,表里面是中断信号与其对应的中断处理函数,最终都会走到do_irq
+
+对于每个cpu来说会有一层虚拟中断层,因为对于多核系统,多个中断处理器,每个cpu会有自己的中断映射表来讲硬件的中断向量对应于虚拟中断向量,其实就是将中断向量表中对应的中断向量描述结构设置为虚拟中断信号的中断描述结构.
+中断描述结构比较重要,其成员有中断处理的动作结构链表,设备的名字.
+中断处理的动作结构体其组成成员有 对应的中断处理函数 虚拟中断号 该中断处理函数是否放在单独的线程中执行,以及对应的线程等
+
+中断的流程:
+当系统收到中断物理信号,会由中断控制器将物理信号转化为中断向量,然后发送给各个cpu
+各个cpu通过硬件的中断向量表调用对应的中断处理函数,在中断处理函数中会把物理中断信号转化为虚拟中断信号,然后调用中断信号的中断处理函数(通过中断映射表里对应的中断描述结构来找到对应的中断处理函数)
+
+每个CPU的前32个中断也会调用到do_IRQ
 
 
 
